<resources>
    <string name="app_name">MQTT Client</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <string name="action_add_connection">Add Connection</string>

    <string name="add_connection_general_label">General</string>
    <string name="add_connection_client_id_label">Client ID</string>
    <string name="add_connection_client_id_default">AndroidClient</string>
    <string name="add_connection_server_label">Server</string>
    <string name="add_connection_server_default">broker.hivemq.com</string>
...
    <string name="toast_sub_failed">Failed to subscribe to %1$s</string>
    <string name="topic_label">Topic</string>

    <!-- Strings for Subscriptions Fragment -->
    <string name="qos_label">QoS</string>
    <string name="notify_label">Show Notifications</string>
    <string name="subscribe_ok">OK</string>
    <string name="subscribe_cancel">Cancel</string>
    <string name="notify_text">Notifications:%1$s</string>

    <string name="home_no_connections">No Connections</string>

    <!-- Home Fragment -->
...
